mongo-express-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
spec:
  selector:
    app: mongodb-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-express-ingress
spec:
  rules:
  - host: mongodb-express.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongodb-express-service
            port: 
              number: 8081
